<?xml version="1.0"?>
<package format="3">
  <name>dh_gripper_driver</name>
  <version>0.0.0</version>
  <description>The dh_gripper_driver package</description>
  <maintainer email="shell@todo.todo">shell</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dh_gripper_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dh_gripper_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
