<?xml version="1.0"?>
<package format="3">
  <name>dh_gripper_msgs</name>
  <version>0.0.1</version>
  <description>Messages for DH Gripper</description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
